--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -11,6 +11,7 @@ changelog to make it simpler for you to find the new sections.
 * Added basic *compiling*
 * Added *crypto algorithms* for hashes
 * Improved external references
+* Extended *update*
 
 %% TODO GCC features more details
 
