--- a/manuscript/authors.txt
+++ b/manuscript/authors.txt
@@ -6,7 +6,7 @@ chapter gets half a page of biography.
 
 I just do not want to start asking for contributions now. Not until the book
 has a well tested and established structure. I would hate to force external
-authors to re-write their chapter several times just because the structus is
+authors to re-write their chapter several times just because the structures is
 still developing....
 
 # Credits
