--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -9,7 +9,7 @@ changelog to make it simpler for you to find the new sections.
 * Added *attacker's goals*
 * Added *antivirus-tests*
 * Added *antivirus-integration*
-
+* Changed PDF format to A5 for a typical book-size PDF
 %% Cryptoalgorithms
 %% Fuzzing
 %% Extend defensive programming / compiling
