--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -11,8 +11,8 @@ changelog to make it simpler for you to find the new sections.
 * Added *antivirus-integration*
 * Changed PDF format to A5 for a typical book-size PDF
 * Added minimal *fuzzing* chapter
+* Extended "Defensive programming"
 %% Cryptoalgorithms
-%% Fuzzing
 %% Extend defensive programming / compiling
 
 
