Added CppCheck chapter

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -20,6 +20,7 @@ changelog to make it simpler for you to find the new sections.
 * Extended "External references"
 * Added *antivirus-spreading-samples*
 * Added *antivirus virustotal*
+* Added *Cppcheck chapter*
 
 
 ## June 2018
