--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -13,12 +13,13 @@ changelog to make it simpler for you to find the new sections.
 * Added *antivirus-tests*  %% Reviewed
 * Added *antivirus-integration*  %% TODO: Split URL
 * Changed PDF format to A5 for a typical book-size PDF
-* Added minimal *fuzzing* chapter
+* Added basic *fuzzing* chapter
 * Extended "Defensive programming"
 * Extended "principles"
 * Extended "TLS chapter"
 * Extended "External references"
 * Added *antivirus-spreading-samples*
+  * Renamed to *antivirus-sharing-samples* Less funny, better to understand that way
 * Added *antivirus virustotal*
 * Added *Cppcheck chapter*
 * Added *Testing compiling* chapter
