--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -19,8 +19,8 @@ changelog to make it simpler for you to find the new sections.
 * Extended "TLS chapter"
 * Extended "External references"
 * Added *antivirus-spreading-samples*
-* Added *antivirus virustotal*
-* Added *Cppcheck chapter*
+* Added *antivirus virustotal* %% Reviewed
+* Added *Cppcheck chapter*  %% Reviewed
 * Added *Testing compiling* chapter
 
 ## June 2018
