Added (unfinished) BLE chapter to book

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -9,6 +9,7 @@ changelog to make it simpler for you to find the new sections.
 ## September 2018
 
 * CAN bus hacking
+* Bluetooth LE (BLE)
 
 ## August 2018
 
