--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -1,4 +1,4 @@
-# Changelog
+# Changelog {#chapter-changelog}
 
 I want to "release early - release often". For this reason I will add a
 changelog to make it simpler for you to find the new sections.
