Moved overview chapter

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -11,6 +11,7 @@ changelog to make it simpler for you to find the new sections.
 * CAN bus hacking
 * Bluetooth LE (BLE)
 * Added code analysis tools requirements table for an overview
+* URLs now in footnotes
 
 ## August 2018
 
