Added content chapter for overview

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -12,6 +12,7 @@ changelog to make it simpler for you to find the new sections.
 * Bluetooth LE (BLE)
 * Added code analysis tools requirements table for an overview
 * URLs now in footnotes
+* Content chapter added
 
 ## August 2018
 
