Added basic behaviour based classification chapter

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -13,6 +13,7 @@ changelog to make it simpler for you to find the new sections.
 * Added code analysis tools requirements table for an overview
 * URLs now in footnotes
 * Content chapter added
+* Chapter Antivirus Behaviour classification added
 
 ## August 2018
 
