--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -12,7 +12,9 @@ changelog to make it simpler for you to find the new sections.
 * Re-worked *Asserts*
     * It got an own chapter
     * Python added
-%% Plan: Assert (+ Python, + JS)
+    * JavaScript added
+* Extended principles
+
 %% Plan: Diagram for TLS
 %% Plan: Unit tests
 %% Plan: Clang static analysis extra
