Fixed some small problems

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -13,6 +13,8 @@ changelog to make it simpler for you to find the new sections.
 %% Plan design
 %% grep for "todo" and "safari". Fix this. Also add amazon alternative
 
+%% TODO: Add part_attacks
+%% TODO: Add Part_tools (ssh, openssl, git, nmap, )
 
 ## December 2018
 
