--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -19,7 +19,9 @@ changelog to make it simpler for you to find the new sections.
 ## December 2018
 
 * Enhanced book list of defensive programming
+* SSH chapter added
 %% CppCheck !!!
+%% Coverage
 
 
 ## November 2018
