--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -14,7 +14,7 @@ changelog to make it simpler for you to find the new sections.
 %% grep for "todo" and "safari". Fix this. Also add amazon alternative
 
 %% TODO: Add part_attacks
-%% TODO: Add Part_tools (ssh, openssl, git, nmap, )
+%% TODO: Add Part_tools (openssl, git, nmap, )
 %% TODO: extend attacks goals
 %% TODO: extend know your enemies
 %% TODO: BLE, including Gattack.io
