--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -23,7 +23,6 @@ changelog to make it simpler for you to find the new sections.
 
 * Added **Software design checklist** (initial version)
 * Added **Google Dorks**
-%% TODO: Add Takeaways to all the offensive stuff.
 %% TODO: Add defense to all the offensive stuff
 %% TODO: Add "intro" to all the parts
 %% TODO: Link new stuff to book structure chapter
@@ -34,6 +33,7 @@ changelog to make it simpler for you to find the new sections.
 * Added **IOC sources** chapter
 * Extended **TLS**
 
+* Updated **content**
 
 ## December 2018
 
