Added intro to testing

--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -36,6 +36,7 @@ changelog to make it simpler for you to find the new sections.
 * Intro for background added
 * Intro for planning added
 * Intro to programming added
+* Intro to testing added
 %% TODO: Add defense to all the offensive stuff
 %% TODO: Add "intro" to all the parts
 
