--- a/manuscript/changelog.txt
+++ b/manuscript/changelog.txt
@@ -41,8 +41,7 @@ changelog to make it simpler for you to find the new sections.
 * Updated samples
 * Intro for tools
 * Reworking first chapters: re-write, remove or move to the end of parts. Reason: I want to get people to encounter the core book faster.
-%%   * Structure
-%%   * Project phases
+   * Structure: removed unneccessary things
    * The origin (moved to the author)
    * stages of learning moved to part "psychology toolbox" (which is not active yet)
    * random encounter removed
