--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -39,6 +39,7 @@ changelog to make it simpler for you to find the new sections.
 * Cleaning up the author page. Adding Mastodon and Twitter
 * Extended **Attacks's goals**
 * Extended **know your enemies**
+%% TODO: Secure coding !!!
 
 ## January 2019
 
